# tlapack

./: README.md
examples/: Math221Plotting.py  e4m3_error_d_cond.csv  e4m3_error_e_cond.csv  e5m2_error_d_cond.csv  e5m2_error_e_cond.csv  float32_error_s_cond.csv
examples/geqr2/: CMakeLists.txt  Haar_gen.py  cholesky_qr.cpp  cond.csv  debug_utils.py  example_GMRES_IR.cpp  example_geqr2.cpp  example_vanilla_IR.cpp  gen.py  generate copy.py  generate.py  mat_balance.hpp  mathgen.cpp  pof_ir.py  recip_test.py  second_generate.py  test.py  test2.py  test3.py  vec_balance.hpp
examples/geqr2/mat/: 1.000000.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.000000.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  (+1970 more)
examples/lu/: CMakeLists.txt  debug.csv  dots.csv  e4m3_error_f_cond.csv  e5m2_error_f_cond.csv  example_GMRES_IR.cpp  example_LU_IR.cpp  example_lu.cpp  example_morrison.cpp  example_nilla_IR.cpp  gen.py  lol.py  plot.py
include/tlapack/base/: utils.hpp
include/tlapack/blas/: dotu.hpp  gemm.hpp  gemv.hpp  ger.hpp  matbal.hpp  trmm.hpp  trsm.hpp  trsv.hpp  vecbal.hpp
include/tlapack/lapack/: arnoldi_iter.hpp  geqr2.hpp  getrf_level0.hpp  lacpy.hpp  larf.hpp  larfg.hpp  lassq.hpp
include/tlapack/plugins/: eigen_half.hpp  float8.h  float8_iee_p.hpp
